# tabuflow

./: .env.example  .gitignore  AGENTS.md  OBSERVE.md  PLAN.md  README.md  ROADMAP.md  langgraph.json  opencode.json  package.json  pyproject.toml  start.sh
.agents/skills/: AGENTS.md
.agents/skills/aws-invoice-pdf-tables/: SKILL.md
.agents/skills/aws-invoice-pdf-tables/references/: aws-email-reporting-context.md
.agents/skills/aws-invoice-pdf-tables/rules/: aws_invoice_text.yaml
.agents/skills/aws-invoice-pdf-tables/scripts/: extract_aws_pdf_text_tables.py
.agents/skills/billing-tabular-pipeline/: SKILL.md
.agents/skills/gcp-cost-pipeline/: SKILL.md
.agents/skills/gcp-cost-pipeline/references/: gcp-cost-view-contract.md  gcp-management-summary-csv.md
.agents/skills/skill-evolution-loop/: SKILL.md
.agents/skills/tabuflow-standalone-tools/: SKILL.md
.agents/skills/tabuflow-standalone-tools/references/: pdf-extraction-recipes.md  pdf-failure-modes.md  pdf-inspection-candidates.md  pdf-strategy-policy.md
.opencode/agents/: orchestrator.md
artifacts/graphs/: orchestrator-graph.mmd  sql-agent-graph.mmd  tabular-agent-graph.mmd
frontend/: .gitignore  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/[...path]/: route.ts
frontend/app/api/chat/: demo-trace-stream.ts  route.ts
frontend/components/: chat-rail.tsx  workbench.tsx
frontend/components/workbench/: activity-bar.tsx  badges.ts  brand-mark.tsx  code-editor.tsx  constants.ts  download.ts  explorer-panel.tsx  result-table.tsx  settings-panel.tsx  shell.tsx  skill-resource-viewer.tsx  source-viewer.tsx  sql-artifacts.ts  sql.tsx  targets.ts  types.ts  ui-scale.ts  use-pane-layout.ts  workspace-panel.tsx
frontend/components/workbench/agent/: chat-markdown.tsx  command-index.ts  panel.tsx
frontend/components/workbench/explorer/: badges.ts  panel.tsx
frontend/components/workbench/workspace/: download.ts  markdown-highlight.tsx  markdown-viewer.tsx  sql.tsx  (+4 more)
frontend/lib/: api.ts  chat-contracts.ts  logger.ts
src/: cli.py  config.py  logger.py
src/agents/: __init__.py  base.py  config.py  sql_agent.py  tabular_agent.py  tool_adapter.py  trace_utils.py
src/agents/fixer/: fixer.py  graph.py
src/agents/orchestrator/: __init__.py  app.py  graph.py  middleware.py  nodes.py  orchestrator.py  payloads.py  prompts.py  runtime.py  skill_context.py  stage_tools.py  state.py  tools.py  utils.py  workflow.py
src/agents/prep_agent/: __init__.py  payloads.py  prep_agent.py  prompts.py  state.py
src/agents/prep_csv/: payloads.py  prep_csv.py  prompts.py  state.py
src/agents/prep_pdf/: payloads.py  prep_pdf.py  state.py
src/agents/prep_stage/: __init__.py  payloads.py  prep_stage.py  prompts.py  state.py
src/agents/query_stage/: __init__.py  nodes.py  prompts.py  sql_files.py  sql_repair.py  state.py
src/agents/sql_agent/: __init__.py  nodes.py  payloads.py  prompts.py  sql_agent.py  state.py
src/agents/tabular_agent/: __init__.py  graph.py  nodes.py  payloads.py  prompts.py  state.py  tabular_agent.py
src/agents/validation_agent/: __init__.py  nodes.py  prompts.py  state.py  validation.py
src/agents/validation_stage/: nodes.py  prompts.py  state.py  validation_stage.py
src/api/: app.py  chat.py  constants.py  routes.py  schemas.py  workspace_data.py
src/backend/: __init__.py  config.py  logger.py
src/backend/agents/: __init__.py  prep_payloads.py  tool_adapter.py
src/backend/api/: __init__.py  constants.py  routes.py  schemas.py  workspace_data.py
src/backend/clients/: __init__.py
src/backend/tools/: __init__.py
src/backend/utils/: __init__.py
src/clients/: multimodal.py  openai.py
src/explainer/: __init__.py  explainer.py
src/file_management/: __init__.py  sql_files.py
src/pipelines/: __init__.py  explainer.py  namer.py
src/sql_compiler/: __init__.py  aggregation.py  compiler.py  expression_validator.py  normalizer.py  parser.py  projections.py  renderer.py  sources.py  types.py  validator.py
src/tabuflow/: __init__.py  cli.py  doctor.py  workspace_db.py
src/tabuflow/artifacts/: __init__.py  catalog.py  catalog_payloads.py  database.py  map.py  naming.py  relationships.py  repair.py  schemas.py  search.py  views.py
src/tabuflow/cli/: __init__.py  __main__.py  main.py  paths.py  pdf_spec.py
src/tabuflow/email/: __init__.py  inspection.py  schemas.py
src/tabuflow/fs/: __init__.py
src/tabuflow/mail/: __init__.py
src/tabuflow/mcp/: __init__.py  __main__.py  server.py
src/tabuflow/pdf/: __init__.py  common.py  extraction.py  ingestion.py  inspection.py  preparation.py  schemas.py  tools.py
src/tabuflow/skills/: __init__.py
src/tabuflow/tabular/: __init__.py  extraction.py  formulas.py  hints.py  ingestion.py  inspection.py  profiling.py  schemas.py  segmentation.py  storage.py
src/tools/: __init__.py
src/tools/artifacts/: __init__.py  catalog.py  catalog_metadata.py  database.py  naming.py  relationships.py  repair.py  sqlite.py
src/tools/fixer/: __init__.py  fixer.py  graph.py  prompts.py  state.py
src/tools/fs/: __init__.py  fs_tools.py  hashline.py  workspace.py
src/tools/pdf/: __init__.py  langextract_workflow.py  llm_ocr_tables.py  tools.py
src/tools/skills/: __init__.py  tools.py
src/tools/sql/: __init__.py  query.py
src/tools/tabular/: __init__.py  ingestion.py  segmentation.py  storage.py  tools.py
src/utils/: langgraph_utils.py
(+71 files in other folders)
