[project]
name = "tabuflow"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "extract-msg>=0.55.0",
    "fastapi>=0.136.0",
    "fastmcp>=3.3.1",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.16",
    "langgraph>=1.1.9",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "ruff>=0.15.11",
    "scipy>=1.17.1",
    "sqlglot>=30.6.0",
    "uvicorn>=0.45.0",
    "xlrd>=2.0.1",
]

[project.scripts]
tabuflow = "tabuflow.cli:main"
tabuflow-mcp = "tabuflow.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend", "src/tabuflow"]

[tool.ruff]
line-length = 180

[tool.ruff.lint]
select = [
    "E4", "E7", "E9", "F",   # Pyflakes, pycodestyle
    "B", "B9",               # flake8-bugbear
    "I",                     # isort
    "UP",                    # pyupgrade
    "SIM",                   # flake8-simplify
    "C4",                    # flake8-comprehensions
    "ARG",                   # flake8-unused-arguments
    "DTZ",                   # flake8-datetimez
    "G",                     # flake8-logging-format
    "S",                     # flake8-bandit
    "RUF",                   # Ruff-specific rules
    "PT",                    # flake8-pytest-style
    "PIE",                   # flake8-pie
    "T20",                   # flake8-print
]
ignore = [
    "B008", "S101", "S105", "S106", "G004", "T201", "S112", "E731", "S311", "I001", "S608"
]
unfixable = ["DTZ", "S"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "tabuflow"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
docstring-code-format = true

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.24",
]
